<?xml version="1.0" encoding="utf-8"?>
<android.support.design.card.MaterialCardView xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width = "match_parent"
    android:layout_height = "wrap_content"
    android:layout_marginStart = "@dimen/margin_medium"
    android:layout_marginTop = "@dimen/margin_medium"
    android:layout_marginEnd = "@dimen/margin_medium">

    <android.support.constraint.ConstraintLayout
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content">


        <ImageView
            android:id = "@+id/img_talk"
            android:layout_width = "0dp"
            android:layout_height = "180dp"
            android:scaleType = "centerCrop"
            app:layout_constraintEnd_toEndOf = "parent"
            app:layout_constraintStart_toStartOf = "parent"
            app:layout_constraintTop_toTopOf = "parent"
            app:srcCompat = "@drawable/talk1" />

        <TextView
            android:id = "@+id/tv_speaker_name"
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_marginStart = "@dimen/margin_medium"
            android:text = "@string/str_speaker_name"
            android:textColor = "@android:color/white"
            app:layout_constraintBottom_toTopOf = "@+id/tv_talk_title"
            app:layout_constraintEnd_toStartOf = "@+id/guideline"
            app:layout_constraintStart_toStartOf = "parent" />

        <TextView
            android:id = "@+id/tv_talk_title"
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_marginBottom = "@dimen/margin_medium_2"
            android:text = "@string/str_talk_title"
            android:textColor = "@android:color/white"
            android:textSize = "@dimen/text_regular_3x"
            android:textStyle = "bold"
            app:layout_constraintBottom_toBottomOf = "@+id/img_talk"
            app:layout_constraintEnd_toStartOf = "@+id/guideline"
            app:layout_constraintStart_toStartOf = "@+id/tv_speaker_name" />

        <android.support.constraint.Guideline
            android:id = "@+id/guideline"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:orientation = "vertical"
            app:layout_constraintGuide_percent = "0.7" />

        <TextView
            android:id = "@+id/tv_duration"
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_marginEnd = "@dimen/margin_medium_2"
            android:text = "@string/str_duration"
            android:textAlignment = "textEnd"
            android:textColor = "@android:color/white"
            app:layout_constraintBottom_toBottomOf = "@+id/tv_talk_title"
            app:layout_constraintEnd_toEndOf = "parent"
            app:layout_constraintHorizontal_bias = "0.415"
            app:layout_constraintStart_toStartOf = "@+id/guideline" />

        <ImageButton
            android:id = "@+id/ib_popup_menu"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_marginBottom = "@dimen/margin_medium_2"
            android:background = "@null"
            android:src = "@drawable/ic_more_vert"
            app:layout_constraintBottom_toTopOf = "@+id/tv_duration"
            app:layout_constraintEnd_toEndOf = "@+id/tv_duration" />
    </android.support.constraint.ConstraintLayout>
</android.support.design.card.MaterialCardView>