<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    xmlns:tools = "http://schemas.android.com/tools"
    android:id = "@+id/nestedScrollView"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    app:layout_behavior = "@string/appbar_scrolling_view_behavior"
    tools:context = ".controllers.TalkDetailActivity">
    <!--
    tools:showIn = "@layout/activity_talk_detail"-->
    <android.support.constraint.ConstraintLayout
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:layout_margin = "@dimen/text_margin">

        <TextView
            android:id = "@+id/tv_speaker_name_detail"
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:text = "@string/str_speaker_name"
            android:textColor = "#1B1B1B"
            app:layout_constraintEnd_toEndOf = "parent"
            app:layout_constraintStart_toStartOf = "parent"
            app:layout_constraintTop_toTopOf = "parent" />

        <TextView
            android:id = "@+id/tv_talk_title_detail"
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:text = "@string/str_talk_title"
            android:textColor = "@android:color/black"
            android:textSize = "@dimen/text_regular_3x"
            android:textStyle = "bold"
            app:layout_constraintEnd_toStartOf = "@+id/guideline2"
            app:layout_constraintStart_toStartOf = "parent"
            app:layout_constraintTop_toBottomOf = "@+id/tv_speaker_name_detail" />

        <android.support.constraint.Guideline
            android:id = "@+id/guideline2"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:orientation = "vertical"
            app:layout_constraintGuide_percent = "0.8" />

        <TextView
            android:id = "@+id/tv_duration_detail"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_marginTop = "5dp"
            android:text = "@string/str_duration"
            app:layout_constraintStart_toStartOf = "parent"
            app:layout_constraintTop_toBottomOf = "@+id/tv_talk_title_detail" />

        <View
            android:id = "@+id/view2"
            android:layout_width = "1dp"
            android:layout_height = "0dp"
            android:layout_marginStart = "@dimen/margin_medium"
            android:layout_marginTop = "2dp"
            android:layout_marginBottom = "2dp"
            android:background = "@color/colorTabText"
            app:layout_constraintBottom_toBottomOf = "@+id/tv_duration_detail"
            app:layout_constraintStart_toEndOf = "@+id/tv_duration_detail"
            app:layout_constraintTop_toTopOf = "@+id/tv_duration_detail" />

        <ImageView
            android:id = "@+id/imageView2"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_marginStart = "@dimen/margin_medium_2"
            app:layout_constraintBottom_toBottomOf = "@+id/tv_duration_detail"
            app:layout_constraintStart_toEndOf = "@+id/view2"
            app:layout_constraintTop_toTopOf = "@+id/tv_duration_detail"
            app:srcCompat = "@drawable/ic_listen" />

        <TextView
            android:id = "@+id/textView7"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_marginStart = "@dimen/margin_medium"
            android:text = "@string/menu_listen"
            android:textColor = "@color/colorAccent"
            app:layout_constraintBottom_toBottomOf = "@+id/imageView2"
            app:layout_constraintStart_toEndOf = "@+id/imageView2"
            app:layout_constraintTop_toTopOf = "@+id/imageView2" />

        <ToggleButton
            android:id = "@+id/tb_playlist"
            android:layout_width = "@dimen/margin_large"
            android:layout_height = "@dimen/margin_large"
            android:layout_marginTop = "@dimen/margin_medium_3"
            android:background = "@drawable/bg_playlist_add_toggle"
            android:checked = "false"
            android:foreground = "@drawable/bg_ripple"
            android:textOff = ""
            android:textOn = ""
            app:layout_constraintStart_toStartOf = "parent"
            app:layout_constraintTop_toBottomOf = "@+id/tv_duration_detail" />

        <ToggleButton
            android:id = "@+id/tb_fav"
            android:layout_width = "@dimen/margin_large"
            android:layout_height = "@dimen/margin_large"
            android:layout_marginStart = "@dimen/margin_medium_2"
            android:background = "@drawable/bg_fav_toogle"
            android:checked = "false"
            android:foreground = "@drawable/bg_ripple"
            android:textOff = ""
            android:textOn = ""
            app:layout_constraintBottom_toBottomOf = "@+id/tb_playlist"
            app:layout_constraintStart_toEndOf = "@+id/tb_playlist"
            app:layout_constraintTop_toTopOf = "@+id/tb_playlist" />

        <Button
            android:id = "@+id/btn_download"
            android:layout_width = "@dimen/margin_large"
            android:layout_height = "@dimen/margin_large"
            android:layout_marginStart = "@dimen/margin_medium_2"
            android:background = "@drawable/ic_file_download"
            app:layout_constraintBottom_toBottomOf = "@+id/tb_fav"
            app:layout_constraintStart_toEndOf = "@+id/tb_fav"
            app:layout_constraintTop_toTopOf = "@+id/tb_fav" />

        <Button
            android:id = "@+id/btn_share"
            android:layout_width = "@dimen/margin_large"
            android:layout_height = "@dimen/margin_large"
            android:layout_marginStart = "@dimen/margin_medium_2"
            android:background = "@drawable/ic_share"
            app:layout_constraintBottom_toBottomOf = "@+id/btn_download"
            app:layout_constraintStart_toEndOf = "@+id/btn_download"
            app:layout_constraintTop_toTopOf = "@+id/btn_download" />

        <TextView
            android:id = "@+id/textView8"
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_marginTop = "@dimen/margin_medium"
            android:text = "@string/large_text"
            app:layout_constraintEnd_toEndOf = "parent"
            app:layout_constraintStart_toStartOf = "parent"
            app:layout_constraintTop_toBottomOf = "@+id/tb_playlist" />

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>